QQA Debugging update